--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,15 +22,15 @@ android {
         }
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-}
 
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -42,6 +42,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //OkHttp
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+    // glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
 }
